<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.selection.SelectionActivity">


    <ImageView
        android:id="@+id/imgSelectionPokemon"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/bulbasur"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <RadioButton
        android:id="@+id/rdbSelectionPokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bulbasur"
        app:layout_constraintEnd_toEndOf="@+id/imgSelectionPokemon"
        app:layout_constraintLeft_toLeftOf="@id/imgSelectionPokemon"
        app:layout_constraintStart_toStartOf="@+id/imgSelectionPokemon"
        app:layout_constraintTop_toBottomOf="@id/imgSelectionPokemon" />

    <ImageView
        android:id="@+id/imgSelectionPokemon2"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/cubone"
        app:layout_constraintStart_toStartOf="@+id/imgSelectionPokemon"
        app:layout_constraintTop_toBottomOf="@+id/rdbSelectionPokemon" />

    <RadioButton
        android:id="@+id/rdbSelectionPokemon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cubone"
        app:layout_constraintEnd_toEndOf="@+id/rdbSelectionPokemon"
        app:layout_constraintStart_toStartOf="@+id/rdbSelectionPokemon"
        app:layout_constraintTop_toBottomOf="@+id/imgSelectionPokemon2" />

    <ImageView
        android:id="@+id/imgSelectionPokemon3"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/feebas"
        app:layout_constraintEnd_toEndOf="@+id/imgSelectionPokemon2"
        app:layout_constraintStart_toStartOf="@+id/imgSelectionPokemon2"
        app:layout_constraintTop_toBottomOf="@+id/rdbSelectionPokemon2" />

    <RadioButton
        android:id="@+id/rdbSelectionPokemon3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feebas"
        app:layout_constraintEnd_toEndOf="@+id/imgSelectionPokemon3"
        app:layout_constraintStart_toStartOf="@+id/imgSelectionPokemon3"
        app:layout_constraintTop_toBottomOf="@+id/imgSelectionPokemon3" />


    <ImageView
        android:id="@+id/imgSelectionPokemon4"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/giratina"
        app:layout_constraintBottom_toBottomOf="@+id/imgSelectionPokemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgSelectionPokemon" />

    <RadioButton
        android:id="@+id/rdbSelectionPokemon4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giratina"
        app:layout_constraintEnd_toEndOf="@+id/imgSelectionPokemon4"
        app:layout_constraintStart_toStartOf="@+id/imgSelectionPokemon4"
        app:layout_constraintTop_toBottomOf="@+id/imgSelectionPokemon4" />

    <ImageView
        android:id="@+id/imgSelectionPokemon5"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/gyarados"
        app:layout_constraintEnd_toEndOf="@+id/imgSelectionPokemon4"
        app:layout_constraintTop_toBottomOf="@+id/rdbSelectionPokemon4" />

    <RadioButton
        android:id="@+id/rdbSelectionPokemon5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gyarados"
        app:layout_constraintEnd_toEndOf="@+id/imgSelectionPokemon5"
        app:layout_constraintStart_toStartOf="@+id/imgSelectionPokemon5"
        app:layout_constraintTop_toBottomOf="@+id/imgSelectionPokemon5" />

    <ImageView
        android:id="@+id/imgSelectionPokemon6"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/pikachu"
        app:layout_constraintEnd_toEndOf="@+id/imgSelectionPokemon5"
        app:layout_constraintTop_toBottomOf="@+id/rdbSelectionPokemon5" />

    <RadioButton
        android:id="@+id/rdbSelectionPokemon6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pikachu"
        app:layout_constraintEnd_toEndOf="@+id/imgSelectionPokemon6"
        app:layout_constraintStart_toStartOf="@+id/imgSelectionPokemon6"
        app:layout_constraintTop_toBottomOf="@+id/imgSelectionPokemon6" />




</androidx.constraintlayout.widget.ConstraintLayout>